--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,35 +1,48 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">List</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Message</a>
-          </li>
-        </ul>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+  <div class="container">
+    <a class="navbar-brand" routerLink='/' routerLinkActive='active'>Dating App</a>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/lists' routerLinkActive='active'>List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Message</a>
+        </li>
+      </ng-container>
+    </ul>
 
-        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-          <a  class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
-          <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a  class="dropdown-item">Edit Profile</a>
-            <div class="dropdown-divider">
+    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item">Edit Profile</a>
+        <div class="dropdown-divider">
 
-            </div>
-            <a  class="dropdown-item" (click)="logout()">Logout</a>
-          </div>
         </div>
-
-        <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
-          <input class="form-control me-2" type="text" placeholder="Username"
-          name="Username" [(ngModel)]="model.Username" >
-          <input class="form-control me-2" type="password" 
-          placeholder="Password" name="Password" [(ngModel)]="model.Password" >
-          <button class="btn btn-outline-success" type="submit">Login</button>
-        </form>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
-  </nav>
+    </div>
+    <!-- <div class="dropdown" *ngIf="'(accountService.currentUser$ | async)'' as user" dropdown>
+      
+      <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | uppercase}}</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item">Edit Profile</a>
+        <div class="dropdown-divider">
+
+        </div>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div> -->
+
+    <form *ngIf="(accountService.currentUser$ | async) === null" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"
+      autocomplete="off">
+      <input class="form-control me-2" type="text" placeholder="Username" name="Username" [(ngModel)]="model.Username">
+      <input class="form-control me-2" type="password" placeholder="Password" name="Password"
+        [(ngModel)]="model.Password">
+      <button class="btn btn-success" type="submit">Login</button>
+    </form>
+  </div>
+</nav>
