--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -16,8 +16,6 @@
      </select>
     </div> -->
 
-    <br/>
-
     <div class="form-group">
         <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
     </div>
@@ -25,7 +23,8 @@
     <br/>
 
     <div class="form-group text-center">
-        <button class="btn btn-success mr-2" (click)="register()" type="submit">Register</button>&nbsp;
+        <!-- <button class="btn btn-success mr-2" (click)="register()" type="submit">Register</button>&nbsp; -->
+        <button class="btn btn-success mr-2"  type="submit">Register</button>&nbsp;
         <button class="btn btn-danger mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
