--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,11 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink='/' routerLinkActive='active'>Dating App</a>
+   
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Erros</a>
+      </li>
       <ng-container *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
           <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
@@ -12,6 +16,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Message</a>
         </li>
+       
       </ng-container>
     </ul>
 
